# sequoia-x

./: .env.example  .gitignore  004_Sequoia-X量化选股系统开发部署运行指南.md  README.md  _run_sync.py  arch_sync_module.md  backtest_compare.py  db_adapter.py  fill_amount.py  fill_extra_fields.py  main.py  migrate_new_fields.py  prd_sync_module.md  pyproject.toml  test.db  数据同步框架需求与运行指南.md  模拟盘交易模块使用说明.md  模拟盘交易逻辑与运行全流程说明.md  股票及指数日线数据拉取模块使用指南.md
.hypothesis/constants/: 0ec2ad0c58dcafe4  212ce8f1852378ac  239ef0474496ea32  31bbaba57dee597f  4dd0eae585426746  631316a390834122  72d06d5e5164b0e3  763ca1ff0d56c439  9f8b589d2847a505  a56add0cdf688067  adbe66b8f9240646  afb6bb702672f794  bf542a643f5ad4ec  c83c914a96e51040  cde791bcacc5de9c  d11620bd7ff4c30d  d27510614b4272b9  e75190b7a372a8e7  ef58adc9adef5526
.hypothesis/tmp/: tmp0gwf2p81  tmp_u58si83
.workbuddy/: check_db.py  check_db2.py
.workbuddy/memory/: 2026-06-08.md  MEMORY.md
docs/: class-diagram.mermaid  sequence-diagram.mermaid
output/backtest_lstm/: daily_records.csv  metrics.json  trade_records.csv
pipeline/: pipeline.py  status.py
sequoia_x/: __init__.py
sequoia_x/analysis/: __init__.py  analyst.py
sequoia_x/core/: __init__.py  config.py  logger.py
sequoia_x/data/: __init__.py  engine.py  save_results.py  sync.py  tencent_source.py
sequoia_x/model_selection/: config.py  features.py  model.py  predict.py  train.py
sequoia_x/notify/: __init__.py  feishu.py  wxpusher.py
tests/: test_config.py  test_data_engine.py  test_feishu.py  test_logger.py  test_main.py  test_strategy.py  test_sync.py
(+37 files in other folders)
